// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Trigger asset triggers door opens 1`] = `
"....
....
....
...."
`;

exports[`Trigger asset triggers door opens and then closes 1`] = `
"....
.◊◊◊
....
...."
`;
